--- a/calender.html
+++ b/calender.html
@@ -10,7 +10,7 @@
       <title> Post-Workout Accessment </title>
   </head>
   <body>
-      <container>
+      <div class="container">
           
           <div class="row sm-primary justify-content-center">
               <div class="col-xs-12">
@@ -44,7 +44,7 @@
 
             </div>
           
-      </container>
+      </div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
