make the calendar work

--- a/profile.html
+++ b/profile.html
@@ -67,6 +67,18 @@
 
           <div class="col-sm-6">
               <div class="form-group row">
+                   <h5 for="example-text-input" class="col-4 col-form-label">Username:</h5>
+                      <div class="col-8">
+                        <input class="form-control" type="text" value="Jane Doe" id="example-text-input">
+                      </div>
+                </div>
+            </div>
+        </div>
+          
+          <div class="row">
+
+          <div class="col-sm-6">
+              <div class="form-group row">
                     <h5 for="exampleSelect1" class="col-3 col-form-label">Gender: </h5>
                     <div class="col-9">
                         <select class="form-control" id="exampleSelect1">
