change some spelling error

--- a/calender.html
+++ b/calender.html
@@ -183,7 +183,7 @@
               <div class="col-xs-12">
                 <div class="page-header">
                     <h1>
-                        Post-Workout Accessment
+                        Post-Workout Assessment
                     </h1>
                 </div>
               </div>
@@ -195,7 +195,7 @@
                     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
 
                             <ul class = "nav nav-pills justify-content-md-between">
-                                <li class = "nav item"> <a class="nav-link active" href="calender.html"> Calender </a></li>
+                                <li class = "nav item"> <a class="nav-link active" href="calender.html"> Calendar </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Wellbeing </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="workouts.html"> Workouts </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="statistics.html"> Statistics </a></li>
