--- a/statistics.html
+++ b/statistics.html
@@ -35,7 +35,7 @@
           <div class="row sm-primary justify-content-center">
               <div class="col-xs-12">
                 <div class="page-header">
-                    <h1>Post-Workout Accessment</h1>
+                    <h1>Post-Workout Assessment</h1>
                 </div>
               </div>
           
@@ -46,7 +46,7 @@
                     <nav class="navbar navbar-light" style="background-color: #e3f2fd;">
 
                             <ul class = "nav nav-pills justify-content-md-between">
-                                <li class = "nav item"> <a class="nav-link" href="calender.html"> Calender </a></li>
+                                <li class = "nav item"> <a class="nav-link" href="calender.html"> Calendar </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Wellbeing </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="workouts.html"> Workouts </a></li>
                                 <li class = "nav item"> <a class="nav-link active" href="statistics.html"> Statistics </a></li>
