Change file format

--- a/Pages/calender.html
+++ b/Pages/calender.html
@@ -8,11 +8,11 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
       <title> Post-Workout Accessment </title>
-<link href='../HiFiPrototype/fullcalendar.min.css' rel='stylesheet' />
-<link href='../HiFiPrototype/fullcalendar.print.min.css' rel='stylesheet' media='print' />
-<script src='../HiFiPrototype/lib/moment.min.js'></script>
-<script src='../HiFiPrototype/lib/jquery.min.js'></script>
-<script src='../HiFiPrototype/fullcalendar.min.js'></script>
+<link href='../fullcalendar.min.css' rel='stylesheet' />
+<link href='../fullcalendar.print.min.css' rel='stylesheet' media='print' />
+<script src='../lib/moment.min.js'></script>
+<script src='../lib/jquery.min.js'></script>
+<script src='../fullcalendar.min.js'></script>
 <!--    <script src='jquery-3.2.1.min.js'></script>-->
 <script>
 
@@ -196,7 +196,7 @@
 
                             <ul class = "nav nav-pills justify-content-md-between">
                                 <li class = "nav item"> <a class="nav-link active" href="calender.html"> Calendar </a></li>
-                                <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Wellbeing </a></li>
+                                <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Well-Being </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="workouts.html"> Workouts </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="statistics.html"> Statistics </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="profile.html"> User Profile </a></li>
