--- a/Pages/statistics.html
+++ b/Pages/statistics.html
@@ -47,7 +47,7 @@
 
                             <ul class = "nav nav-pills justify-content-md-between">
                                 <li class = "nav item"> <a class="nav-link" href="calender.html"> Calendar </a></li>
-                                <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Wellbeing </a></li>
+                                <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Well-Being </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="workouts.html"> Workouts </a></li>
                                 <li class = "nav item"> <a class="nav-link active" href="statistics.html"> Statistics </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="profile.html"> User Profile </a></li>
