--- a/Pages/workouts.html
+++ b/Pages/workouts.html
@@ -46,7 +46,7 @@
 
                             <ul class = "nav nav-pills justify-content-md-between">
                                 <li class = "nav item"> <a class="nav-link" href="calender.html"> Calendar </a></li>
-                                <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Wellbeing </a></li>
+                                <li class = "nav item"> <a class="nav-link" href="statusandwellbeing.html"> Status and Well-Being </a></li>
                                 <li class = "nav item"> <a class="nav-link active" href="workouts.html"> Workouts </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="statistics.html"> Statistics </a></li>
                                 <li class = "nav item"> <a class="nav-link" href="profile.html"> User Profile </a></li>
@@ -145,6 +145,7 @@
                   <option>160 beats per minute</option>
                   <option>155 beats per minute</option>
                   <option>150 beats per minute</option>
+                  <option>Do Not Apply</option>
                 </select>
               </div>
            </div>
@@ -238,6 +239,11 @@
                             </tr>
                             <tr>
                               <th scope="row">3</th>
+                                <td>Aerobic Training</td>
+                                <td>30-40 min</td>
+                                <td>170 beats per minute</td>
+                                <td>Meidum</td>
+                                <td>400-500 kcal</td>
                              
                             </tr>
                           </tbody>
